objects/InsurancePolicyParticipant.object
<CustomObject>
    <fields>
        <fullName>AW_ConsultantCode__c</fullName>
        <label>Consultant Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_DateofBirth__c</fullName>
        <description>Date of Birth of Policy Participant</description>
        <label>Date of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_FirstName__c</fullName>
        <description>First Name of Policy Participant</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Gender__c</fullName>
        <description>Gender of Policy Participant</description>
        <label>Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_IdentificationNumber__c</fullName>
        <description>Identification Number of Policy Participant</description>
        <label>Identification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Initials__c</fullName>
        <description>Initials of Policy Participant</description>
        <label>Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_LastName__c</fullName>
        <description>Last Name of Policy Participant</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_MaritalStatus__c</fullName>
        <description>Marital Status of Policy Participant</description>
        <label>Marital Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Occupation__c</fullName>
        <description>Occupation of Policy Participant</description>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PDBID__c</fullName>
        <description>PDBID of Policy Participant</description>
        <label>PDB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PercentageSplit__c</fullName>
        <description>Percentage Split</description>
        <label>Percentage Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_RelationshipToLifeAssured__c</fullName>
        <label>Relationship to Life Assured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adopted Brother</fullName>
                </value>
                <value>
                    <fullName>Adopted Daughter</fullName>
                </value>
                <value>
                    <fullName>Adopted Mother</fullName>
                </value>
                <value>
                    <fullName>Adopted Sister</fullName>
                </value>
                <value>
                    <fullName>Adopted Son</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Brother-In-Law</fullName>
                </value>
                <value>
                    <fullName>Business Associate</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Co-Director</fullName>
                </value>
                <value>
                    <fullName>Co-Shareholder</fullName>
                </value>
                <value>
                    <fullName>Common Law Spouse</fullName>
                </value>
                <value>
                    <fullName>Common-Law-Husband</fullName>
                </value>
                <value>
                    <fullName>Common-Law-Wife</fullName>
                </value>
                <value>
                    <fullName>Cousin</fullName>
                </value>
                <value>
                    <fullName>Creditor</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Daughter-In-Law</fullName>
                </value>
                <value>
                    <fullName>Debtor</fullName>
                </value>
                <value>
                    <fullName>Domestic Helper</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Ex-Husband</fullName>
                </value>
                <value>
                    <fullName>Ex-Wife</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Father-In-Law</fullName>
                </value>
                <value>
                    <fullName>Fiance (Male)</fullName>
                </value>
                <value>
                    <fullName>Fiancee (Female)</fullName>
                </value>
                <value>
                    <fullName>Foster Daughter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Relationship__c</fullName>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_RoleCode__c</fullName>
        <description>Role Code of Policy Participant</description>
        <label>Role Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Salutation__c</fullName>
        <description>Salutation of Policy Participant</description>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_SecondName__c</fullName>
        <description>Second Name of Policy Participant</description>
        <label>Second Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CountryOfCitizenship__c</fullName>
        <description>Used for integration to populate Country of Citizenship from source systems (Compass/Lifestyle)</description>
        <label>Country of Citizenship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CountryOfIncorporation__c</fullName>
        <description>Used for integration to populate Country of Incorporation from source systems (Compass/Lifestyle)</description>
        <label>Country of Incorporation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CountryOfIssue__c</fullName>
        <description>Used for integration to populate Country of Issue from source systems (Compass/Lifestyle)</description>
        <label>Country of Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_DateOfIncorporation__c</fullName>
        <description>Used for integration to populate Date of Incorporation from source systems (Compass/Lifestyle)</description>
        <label>Date of Incorporation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_Email__c</fullName>
        <description>Used for integration to populate Email from source systems (Compass/Lifestyle)</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMN_ExpiryDate__c</fullName>
        <description>Used for integration to populate Expiry Date from source systems (Compass/Lifestyle)</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_FifthName__c</fullName>
        <description>Used for integration to populate Fifth Name from source systems (Compass/Lifestyle)</description>
        <label>Fifth Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_FourthName__c</fullName>
        <description>Used for integration to populate Fourth Name from source systems (Compass/Lifestyle)</description>
        <label>Fourth Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ImmediateExpenseBenefit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate Immediate Expense Benefit Indicator from source systems (Compass/Lifestyle)</description>
        <inlineHelpText>The Immediate Expenses Benefit will accelerate a proportion of the Life Cover. R 50000.00 of the Death Value will be paid to the Client on the death of the First Life Assured. A 2-year waiting period from the date that the Life Cover benefit was taken out applies to the Immediate Expenses Benefit.</inlineHelpText>
        <label>Immediate Expense Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_IssueDate__c</fullName>
        <description>Used for integration to populate Issue Date from source systems (Compass/Lifestyle)</description>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_Mobile__c</fullName>
        <description>Used for integration to populate Mobile Number from source systems (Compass/Lifestyle)</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMN_OccupationRiskCategory__c</fullName>
        <description>Used for integration to populate Occupation Risk Category from source systems (Compass/Lifestyle)</description>
        <label>Occupation Risk Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_OrganisationType__c</fullName>
        <description>Used for integration to populate Organisation Type from source systems (Compass/Lifestyle)</description>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>FOR_CO</fullName>
                </value>
                <value>
                    <fullName>FOR_TRUST</fullName>
                </value>
                <value>
                    <fullName>INC</fullName>
                </value>
                <value>
                    <fullName>NPC</fullName>
                </value>
                <value>
                    <fullName>NPO</fullName>
                </value>
                <value>
                    <fullName>PUB_CO</fullName>
                </value>
                <value>
                    <fullName>PVT_CO</fullName>
                </value>
                <value>
                    <fullName>SOC</fullName>
                </value>
                <value>
                    <fullName>TRUST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_OrganizationName__c</fullName>
        <description>Used for integration to populate Organization Name from source systems (Compass/Lifestyle)</description>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PassportNumber__c</fullName>
        <description>Used for integration to populate Passport Number from source systems (Compass/Lifestyle)</description>
        <label>Passport Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PhoneNumber__c</fullName>
        <description>Used for integration to populate Roles Phone Number from source systems (Compass/Lifestyle)</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMN_PreferredLanguage__c</fullName>
        <description>Used for integration to populate Preferred Language from source systems (Compass/Lifestyle).</description>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_Qualification__c</fullName>
        <description>Used for integration to populate Qualification from source systems (Compass/Lifestyle).</description>
        <label>Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>None</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>No Matric</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Matric</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 or 4 Year Technikon or Teachers College Diploma</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Undergraduate University Degree</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Postgraduate Qualification</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Future Professional</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_Race__c</fullName>
        <description>Used for integration to populate Race from source systems (Compass/Lifestyle)</description>
        <label>Race</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_RegistrationNumber__c</fullName>
        <description>Used for integration to populate Company Registration Number from source systems (Compass/Lifestyle)</description>
        <label>Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_RelationshipToOwner__c</fullName>
        <description>Used for integration to populate Relationship to Owner from source systems (Compass/Lifestyle). Field Name and Label was updated from To Owner to Relationship to Owner.</description>
        <label>Relationship To Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adopted Brother</fullName>
                </value>
                <value>
                    <fullName>Adopted Daughter</fullName>
                </value>
                <value>
                    <fullName>Adopted Mother</fullName>
                </value>
                <value>
                    <fullName>Adopted Sister</fullName>
                </value>
                <value>
                    <fullName>Adopted Son</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Brother-In-Law</fullName>
                </value>
                <value>
                    <fullName>Business Associate</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Co-Director</fullName>
                </value>
                <value>
                    <fullName>Co-Shareholder</fullName>
                </value>
                <value>
                    <fullName>Common Law Spouse</fullName>
                </value>
                <value>
                    <fullName>Common-Law-Husband</fullName>
                </value>
                <value>
                    <fullName>Common-Law-Wife</fullName>
                </value>
                <value>
                    <fullName>Cousin</fullName>
                </value>
                <value>
                    <fullName>Creditor</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Daughter-In-Law</fullName>
                </value>
                <value>
                    <fullName>Debtor</fullName>
                </value>
                <value>
                    <fullName>Domestic Helper</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Ex-Husband</fullName>
                </value>
                <value>
                    <fullName>Ex-Wife</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Father-In-Law</fullName>
                </value>
                <value>
                    <fullName>Fiance (Male)</fullName>
                </value>
                <value>
                    <fullName>Fiancee (Female)</fullName>
                </value>
                <value>
                    <fullName>Foster Daughter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_Smoker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate Smoker Status from source systems (Compass/Lifestyle)</description>
        <label>Smoker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_SouthAfricanResidentIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate South African Resident Indicator from source systems (Compass/Lifestyle)</description>
        <label>South African Resident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_Suffix__c</fullName>
        <description>Used for integration to populate Company Suffix from source systems (Compass/Lifestyle)</description>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>(PTY) LTD</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Incorporated</fullName>
                </value>
                <value>
                    <fullName>LTD</fullName>
                </value>
                <value>
                    <fullName>NPC</fullName>
                </value>
                <value>
                    <fullName>SOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_ThirdName__c</fullName>
        <description>Used for integration to populate Third Name from source systems (Compass/Lifestyle)</description>
        <label>Third Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_WeddingAnniversary__c</fullName>
        <description>Used for integration to populate Marriage Date from source systems (Compass/Lifestyle)</description>
        <label>Wedding Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_WorkPhoneNumber__c</fullName>
        <description>Used for integration to populate Work Number from source systems (Compass/Lifestyle)</description>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Insurance Policy Participants</relationshipLabel>
        <relationshipName>HouseholdInsurancePolicyParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSC_PartyName__c</fullName>
        <description>Used to display concatenate string First Name + Last Name or Organisation name on compact layout</description>
        <formula>IF(ISBLANK(AW_FirstName__c),CMN_OrganizationName__c ,AW_FirstName__c &amp; &quot; &quot; &amp; AW_LastName__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_ConsultantCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains the Consultant Code associated to a particular Insurance Policy Participant.</description>
        <label>Consultant Code</label>
        <referenceTo>SC_ConsultantCodes__c</referenceTo>
        <relationshipLabel>Insurance Policy Participants</relationshipLabel>
        <relationshipName>Insurance_Policy_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_ConsultantStatus__c</fullName>
        <description>Indicates the agreement status of associated consultant.</description>
        <label>Consultant Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_InsurancePolicyParticipants</fullName>
        <filterScope>Everything</filterScope>
        <label>All Insurance Policy Participants</label>
    </listViews>
    <listViews>
        <fullName>All_InsurancePolicyParticipants</fullName>
        <filterScope>Everything</filterScope>
        <label>All Insurance Policy Participants</label>
    </listViews>
    <recordTypes>
        <fullName>CMN_LibertyInsurancePolicyParticipant</fullName>
        <active>true</active>
        <description>Record type to be used for Integration with Compass &amp; Lifestyle.</description>
        <label>Liberty Insurance Policy Participant</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>